[tool.poetry]
name = "OOP"
version = "0.1.0"
description = "Low level design and OOP"
authors = [ "Benjamin Labrecque" ]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
typer = "^0.7.0"
pydantic = "^1.10.7"
pendulum = "^3.0.0"
ipython = "^8.16.0"
pre-commit = "^4.2.0"
uvloop = "^0.21.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.1"
mypy = "^1.1.1"
isort = "^5.12.0"
ruff = "^0.1.5"

[tool.mypy]
files = "src"
strict = true
namespace_packages = true
explicit_package_bases = true

[tool.ruff.lint]
select = [
    # pycodestyle
    # "E",
    # Pyflakes
    # "F",
    # pyupgrade
    # "UP",
    # flake8-bugbear
    # "B",
    # flake8-simplify
    # "SIM",
    # isort
    "I",
]
fixable = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
